# Raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
objloader/: objloader.cpp  objloader.h
src/: BoundingBox.cpp  Image.cpp  Image.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h  boundingBox.cpp  boundingBox.h  boxLight.cpp  boxLight.h  image.cpp  image.h  light.cpp  light.h  main.cpp  mathelper.hpp  ray.cpp  ray.h
src/shapes/: Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  mesh.cpp  mesh.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
